Fixed issue with Additive jump landing animation

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -59,6 +59,7 @@ FontDPI=72
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/OmniProject")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/OmniProject")
+bAllowMultiThreadedAnimationUpdate=False
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
