Game Mode, Controller, Player State Classes

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/TestingGround.TestingGround
 EditorStartupMap=/Game/Maps/TestingGround.TestingGround
+GlobalDefaultGameMode=/Game/Blueprint/GameModes/OmniGameMode.OmniGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
