Main menu and Main menu game mode created

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/TestingGround.TestingGround
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/Maps/TestingGround.TestingGround
 GlobalDefaultGameMode=/Game/Blueprint/GameModes/OmniGameMode.OmniGameMode_C
 
