--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/Maps/TestingGround.TestingGround
 GlobalDefaultGameMode=/Game/Blueprint/GameModes/OmniGameMode.OmniGameMode_C
+GameInstanceClass=/Script/OmniProject.OmniGameInstance
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
